re copied media queries. Nav not aligning correctly on mq 768

--- a/scss/component/_media-queries.scss
+++ b/scss/component/_media-queries.scss
@@ -1,10 +1,10 @@
 // Media queries
 
-
 /* ============================================= */
 /*              Media Queries                    */
 /* ============================================= */
-@media (min-width: $break-m) {
+
+@media (min-width: 768px) {
 
 .container {
   max-width: 1400px;
